# protobuf_example

./: CMakeLists.txt
src/main/protobuf/example/: data.proto  service.proto
