INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
set(Protobuf_IMPORT_DIRS ${Protobuf_IMPORT_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/src/main/protobuf) 
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${Protobuf_IMPORT_DIRS}/scalapb/scalapb.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${Protobuf_IMPORT_DIRS}/example/data.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${Protobuf_IMPORT_DIRS}/example/service.proto)
ADD_LIBRARY(proto ${PROTO_HDRS} ${PROTO_SRCS})
